body dark mode fix

--- a/style.css
+++ b/style.css
@@ -18,6 +18,11 @@
   --text-color: #fff;
 }
 
+body.darkmode {
+  background-color: #121212;
+  color: #ffffff;
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
